Fixed list endpoints. Added filters
