# backend/openapi.yaml
@@ -154,11 +154,25 @@ paths:
       - world-region-admin-controller
       operationId: listWorldRegionsAdmin
       parameters:
-      - name: arg0
+      - name: query
         in: query
-        required: true
+        required: false
         schema:
-          $ref: "#/components/schemas/WorldRegionCriteriaDto"
+          type: string
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: string
+          example: 0
+        example: 0
+      - name: limit
+        in: query
+        required: false
+        schema:
+          type: string
+          example: 10
+        example: 10
       responses:
         "200":
           description: OK
@@ -190,11 +204,25 @@ paths:
       - country-admin-controller
       operationId: listCountriesAdmin
       parameters:
-      - name: arg0
+      - name: query
         in: query
-        required: true
+        required: false
         schema:
-          $ref: "#/components/schemas/CountryCriteriaDto"
+          type: string
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: string
+          example: 0
+        example: 0
+      - name: limit
+        in: query
+        required: false
+        schema:
+          type: string
+          example: 10
+        example: 10
       responses:
         "200":
           description: OK
@@ -226,11 +254,25 @@ paths:
       - world-region-controller
       operationId: listWorldRegions
       parameters:
-      - name: arg0
+      - name: query
         in: query
-        required: true
+        required: false
         schema:
-          $ref: "#/components/schemas/WorldRegionCriteriaDto"
+          type: string
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: string
+          example: 0
+        example: 0
+      - name: limit
+        in: query
+        required: false
+        schema:
+          type: string
+          example: 10
+        example: 10
       responses:
         "200":
           description: OK
@@ -263,11 +305,25 @@ paths:
       - country-controller
       operationId: listCountries
       parameters:
-      - name: arg0
+      - name: query
         in: query
-        required: true
+        required: false
         schema:
-          $ref: "#/components/schemas/CountryCriteriaDto"
+          type: string
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: string
+          example: 0
+        example: 0
+      - name: limit
+        in: query
+        required: false
+        schema:
+          type: string
+          example: 10
+        example: 10
       responses:
         "200":
           description: OK
@@ -378,22 +434,6 @@ components:
         worldRegionId:
           type: integer
           format: int32
-    PaginationDto:
-      type: object
-      properties:
-        page:
-          type: integer
-          format: int32
-          example: 0
-        limit:
-          type: integer
-          format: int32
-          example: 10
-    WorldRegionCriteriaDto:
-      type: object
-      properties:
-        pagination:
-          $ref: "#/components/schemas/PaginationDto"
     CountryResponseDto:
       type: object
       properties:
@@ -426,13 +466,6 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/CountryResponseDto"
-    CountryCriteriaDto:
-      type: object
-      properties:
-        query:
-          type: string
-        pagination:
-          $ref: "#/components/schemas/PaginationDto"
     PageResponseDtoCountryResponseDto:
       type: object
       properties:
