# backend/src/main/java/org/ukma/spring/crooodle/controller/WorldRegionController.java
@@ -3,11 +3,13 @@ package org.ukma.spring.crooodle.controller;
 import io.swagger.v3.oas.annotations.Operation;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springdoc.core.annotations.ParameterObject;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 import org.ukma.spring.crooodle.dto.WorldRegionCriteriaDto;
 import org.ukma.spring.crooodle.dto.WorldRegionResponseDto;
 import org.ukma.spring.crooodle.dto.common.PageResponseDto;
+import org.ukma.spring.crooodle.dto.common.PaginationDto;
 import org.ukma.spring.crooodle.service.WorldRegionService;
 
 @RestController
@@ -26,7 +28,10 @@ public class WorldRegionController {
     @Operation(operationId = "listWorldRegions")
     @PreAuthorize("permitAll()")
     @GetMapping
-    public PageResponseDto<WorldRegionResponseDto> list(@RequestParam(required = false) @Valid WorldRegionCriteriaDto criteriaDto) {
-        return service.list(criteriaDto);
+    public PageResponseDto<WorldRegionResponseDto> list(
+        @ParameterObject @Valid WorldRegionCriteriaDto criteriaDto,
+        @ParameterObject @Valid PaginationDto paginationDto
+    ) {
+        return service.list(criteriaDto, paginationDto);
     }
 }
