# backend/src/main/java/org/ukma/spring/crooodle/dto/CountryCriteriaDto.java
@@ -1,12 +1,8 @@
 package org.ukma.spring.crooodle.dto;
 
-import lombok.Value;
-import org.springdoc.api.annotations.ParameterObject;
-import org.ukma.spring.crooodle.dto.common.PaginationDto;
+import lombok.Data;
 
-@ParameterObject
-@Value
+@Data
 public class CountryCriteriaDto {
     String query;
-    PaginationDto pagination;
 }
